<?xml version="1.0"?>
<package>
  <name>tb2s_navigation</name>
  <version>0.0.0</version>
  <description>Launch and config files tb2s Navigation</description>
  <maintainer email="shinselrobots@gmail.com">Dave Shinsel</maintainer>
  <license>Apache-2</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>tf</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>tf</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>map_server</run_depend>  
  <run_depend>amcl</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>dwa_local_planner</run_depend>


</package>
