<?xml version="1.0"?>
<package>
  <name>idle_behavior</name>
  <version>0.0.1</version>
  <description>Idle behavior plugin, when robot isn't doing anything else</description>
  <maintainer email="matt@tecnovelty.com">Matt Curfman</maintainer>
  <license>Apache-2</license>
  <author>Matt Curfman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>behavior_common</build_depend>

  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>behavior_common</run_depend>

  <export>
    <behavior_common plugin="${prefix}/behavior_plugins.xml" />
  </export>
</package>
